
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "toyopuc-computerlink"
version = "1.0.4"
description = "Python client library for TOYOPUC computer-link communication over TCP and UDP"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{name = "fa-yoshinobu"}]
maintainers = [{name = "fa-yoshinobu"}]
keywords = ["toyopuc", "plc", "computer-link", "industrial", "tcp", "udp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]

[project.optional-dependencies]
docs = ["pdoc"]

[project.urls]
Homepage = "https://github.com/fa-yoshinobu/plc-comm-computerlink-python"
Repository = "https://github.com/fa-yoshinobu/plc-comm-computerlink-python"
Documentation = "https://fa-yoshinobu.github.io/plc-comm-computerlink-python/"

[tool.setuptools.packages.find]
include = ["toyopuc"]
exclude = ["tests*", "scripts*", "docsrc/maintainer*", "docsrc/validation*"]

[tool.setuptools]
include-package-data = true
exclude-package-data = { "*" = ["TODO.md"] }


