
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "toyopuc-computerlink"
version = "0.1.3"
description = "Python client library for TOYOPUC computer-link communication over TCP and UDP"
readme = "README.md"
requires-python = ">=3.10"

authors = [{name = "fa-yoshinobu"}]
maintainers = [{name = "fa-yoshinobu"}]
keywords = ["toyopuc", "plc", "computer-link", "industrial", "tcp", "udp"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]

[project.optional-dependencies]
docs = ["pdoc"]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "twine>=5.1",
]

[project.urls]
Homepage = "https://github.com/fa-yoshinobu/plc-comm-computerlink-python"
Repository = "https://github.com/fa-yoshinobu/plc-comm-computerlink-python"
Documentation = "https://fa-yoshinobu.github.io/plc-comm-computerlink-python/"

[tool.setuptools.packages.find]
include = ["toyopuc"]
exclude = ["tests*", "scripts*", "docsrc/maintainer*", "docsrc/validation*"]

[tool.setuptools]
include-package-data = true
exclude-package-data = { "*" = ["TODO.md"] }

[tool.setuptools.package-data]
toyopuc = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
files = ["toyopuc"]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[tool.coverage.run]
source = ["toyopuc"]
branch = true

[tool.coverage.report]
show_missing = true







